--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/jszip": "^3.4.0",
     "jszip": "^3.10.1",
+    "vite-plugin-wasm": "^3.5.0",
     "vue": "^3.5.17"
   },
   "devDependencies": {
